# tauri-agent-plugin

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs  package.json  tsconfig.json  tsup.config.ts
.github/workflows/: ci.yml
daemon/: client.ts  connect.ts  endpoint.ts  index.ts  server.ts  session.ts  static-app.ts
docs/: adopting.md  architecture.md  ci-workflow.yml  commands.md  security.md  token-budget.md
docs/superpowers/plans/: 2026-07-08-improvement-plan.md
docs/superpowers/plans/archived/: 2026-07-06-headless-agent-debugger.md
examples/fixture-app/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
examples/fixture-app/src/: main.ts  style.css
examples/fixture-app/src-tauri/: Cargo.toml  tauri.conf.json
examples/fixture-app/src-tauri/capabilities/: default.json
examples/fixture-app/src-tauri/src/: lib.rs  main.rs
guest-js/: bridge-gate.ts  capture-buffer.ts  dom-actions.ts  evaluate.ts  index.ts  instrumentation.ts  locator-action.ts  screenshot.ts  semantic-stream.ts  semantic-tree.ts
mcp/: index.ts  server.ts  stdio.ts
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: agent_act.toml  agent_action.toml  agent_attach.toml  agent_blur.toml  agent_bridge_response.toml  agent_check.toml  agent_cookies.toml  agent_dialog.toml  agent_drag.toml  agent_eval.toml  agent_events.toml  agent_expect.toml  agent_find.toml  agent_focus.toml  agent_hover.toml  agent_inspect.toml  agent_ipc.toml  agent_location.toml  agent_logs.toml  agent_network.toml  agent_record.toml  agent_screenshot.toml  agent_scroll.toml  agent_select.toml  agent_snapshot.toml  agent_state.toml  agent_storage.toml  agent_stream.toml  agent_type.toml  agent_upload.toml  agent_wait.toml  agent_window.toml  agent_windows.toml
permissions/schemas/: schema.json
protocol/: error.ts  index.ts  json-rpc.ts  types.ts
src/: bridge.rs  commands.rs  endpoint.rs  error.rs  lib.rs  models.rs  random.rs  registry.rs  screenshot.rs  server.rs
tests/: cli-socket.test.ts  cli.test.ts  connect.test.ts  daemon-rpc.test.ts  endpoint.test.ts  evaluate.test.ts  executor-parity.test.ts  fixture-app.test.ts  instrumentation-bridge.test.ts  instrumentation.test.ts  live-fixture.ts  mcp-stdio.test.ts  mcp.test.ts  plugin-api.test.ts  protocol.test.ts  rust_endpoint.rs  screenshot.test.ts  semantic-stream.test.ts  semantic-tree.test.ts  session.test.ts  socket-rpc.test.ts
tests/fixtures/: endpoint-app-ids.json
