[package]
name = "tauri-plugin-agent"
version = "0.1.0"
description = "Agent-facing control surface for live Tauri apps using compact semantic trees."
edition = "2021"
rust-version = "1.77.2"
license = "MIT OR Apache-2.0"
repository = "https://github.com/byeongsu-hong/tauri-agent-plugin"
links = "tauri-plugin-agent"

[lib]
crate-type = ["lib"]

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }

[dependencies]
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = "2"
thiserror = "2"
