[package]
name = "tauri-plugin-agent"
version = "0.1.0"
description = "Agent-facing control surface for live Tauri apps using compact semantic trees."
edition = "2021"
rust-version = "1.77.2"
authors = ["Byeongsu Hong"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/byeongsu-hong/tauri-agent-plugin"
readme = "README.md"
keywords = ["tauri", "agent", "debugger", "automation", "webview"]
categories = ["development-tools::debugging", "gui", "development-tools::testing"]
links = "tauri-plugin-agent"
include = [
    "src/**/*.rs",
    "permissions/**",
    "build.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE-MIT",
    "LICENSE-APACHE",
]

[lib]
crate-type = ["lib"]

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }

[dependencies]
base64 = "0.22"
getrandom = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = "2"
thiserror = "2"

[target.'cfg(target_os = "macos")'.dependencies.objc2-app-kit]
version = "0.3"
features = ["std", "NSBitmapImageRep", "NSImageRep", "NSView", "NSWindow"]
default-features = false

[target.'cfg(target_os = "macos")'.dependencies.objc2-foundation]
version = "0.3"
features = ["std", "NSData", "NSDictionary"]
default-features = false

[target.'cfg(target_os = "macos")'.dependencies.objc2]
version = "0.6"
default-features = false
