[package]
name = "tauri-agent-plugin"
version = "0.0.2"
description = "Agent-facing control surface for live Tauri apps using compact semantic trees."
edition = "2021"
rust-version = "1.77.2"
authors = ["Byeongsu Hong"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/byeongsu-hong/tauri-agent-plugin"
readme = "README.md"
keywords = ["tauri", "agent", "debugger", "automation", "webview"]
categories = ["development-tools::debugging", "gui", "development-tools::testing"]
# Tauri derives the runtime ACL namespace from this internal plugin identity.
# Keep `agent:*` stable even though the public crate is `tauri-agent-plugin`.
links = "tauri-plugin-agent"
include = [
    "/src/**/*.rs",
    "/permissions/**",
    "/build.rs",
    "/Cargo.toml",
    "/README.md",
    "/LICENSE-MIT",
    "/LICENSE-APACHE",
]

[lib]
crate-type = ["lib"]

[features]
# Preserve the normal Tauri experience for existing adopters. CEF apps opt out
# of this default and enable `cef`; the app owns its concrete CEF runtime while
# this plugin stays generic over `tauri::Runtime`.
default = ["wry"]
wry = ["tauri/wry"]
cef = []
# Address individual child webviews within a window (tree/find/click/etc. by
# webview label, and child webviews listed by `windows`). Requires Tauri's
# `unstable` API surface, so it is opt-in rather than on by default.
unstable-multiwebview = ["tauri/unstable"]

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }

[dev-dependencies]
serde_json = "1"
# `unstable` lets tests exercise the multiwebview `add_child` path (#39); it
# only affects test builds via feature unification, not the published crate.
tauri = { version = "2", default-features = false, features = ["test", "unstable"] }

[dependencies]
base64 = "0.22"
getrandom = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", default-features = false }
thiserror = "2"

[target.'cfg(target_os = "macos")'.dependencies.objc2-app-kit]
version = "0.3"
features = ["std", "NSBitmapImageRep", "NSImageRep", "NSView", "NSWindow"]
default-features = false

[target.'cfg(target_os = "macos")'.dependencies.objc2-foundation]
version = "0.3"
features = ["std", "NSData", "NSDictionary"]
default-features = false

[target.'cfg(target_os = "macos")'.dependencies.objc2]
version = "0.6"
default-features = false
