[package]
name = "tauri-agent-fixture"
version = "0.1.0"
description = "Fixture app for tauri-agent debugger testing"
edition = "2021"

[lib]
name = "tauri_agent_fixture_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-agent = { path = "../../.." }
